# igraph-sugiyama

./: Doxyfile  Makefile.am  README.md  autogen.sh  config.h  configure.ac
data/: 0do  label00.gv  label01.gv  label02.gv  label03.gv  label04.gv  label05.gv  label06.gv  label07.gv  label08.gv  label09.gv  label10.gv  label11.gv  label12.gv  label13.gv  label14.gv  label15.gv  label16.gv  panama-papers.gv
src/: .indent.pro  0v  Makefile.am  bignum.c  centrality.c  color.c  color.h  conversion.c  dqueue.pmt  gui.c  gui.h  gui2.c  gui2.h  gui3.c  heap.c  heap.pmt  iterators.c  main.c  matrix.pmt  mem.h  nes.c  nes.h  skiplist.c  skiplist.h  splay-tree.c  splay-tree.h  spmatrix.c  stack.pmt  sugiyama.orig.c  triangles_template.h  uniqnode.c  uniqnode.h  uniqstring.c  uniqstring.h  vector.pmt  vector_ptr.c
