# /* -*- mode: C -*-  */
# /* 
#    IGraph library.
#    Copyright (C) 2003-2012  Gabor Csardi <csardi.gabor@gmail.com>
#    334 Harvard street, Cambridge, MA 02139 USA
#    
#    This program is free software; you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation; either version 2 of the License, or
#    (at your option) any later version.
#    
#    This program is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#    
#    You should have received a copy of the GNU General Public License
#    along with this program; if not, write to the Free Software
#    Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 
#    02110-1301 USA
# 
# */


# program name
bin_PROGRAMS=sugi

# source code files
sugi_SOURCES = \
	main.c \
	sugiyama.c \
	vector.c \
	vector_ptr.c \
	adjlist.c \
	heap.c \
	feedback_arc_set.c \
	spanning_trees.c \
	structure_generators.c \
	structural_properties.c \
	attributes.c \
	centrality.c \
	flow.c \
	components.c \
	iterators.c \
	matrix.c \
	triangles.c \
	complex.c \
	bigint.c \
	bignum.c \
	math.c \
	qsort.c \
	qsort_r.c \
	interrupt.c \
	random.c \
	visitors.c \
	type_indexededgelist.c \
	dqueue.c \
	progress.c \
	types.c \
	basic_query.c \
	conversion.c \
	spmatrix.c \
	memory.c \
	igraph_error.c \
	igraph_stack.c \
	igraph_fixed_vectorlist.c \
	igraph_buckets.c \
	gui.c \
	gui2.c \
	color.c \
	skiplist.c \
	uniqstring.c \
	uniqnode.c \
	splay-tree.c \
	nes.c

# link math lib
sugi_LDADD = -lm @GTK_LIBS@

# end.
